AX: aria-level does not override implicit level on h1, h2, etc https://bugs.webkit.org/show_bug.cgi?id=114692

Patch by James Craig <james@cookiecrook.com> on 2013-04-17
Reviewed by Chris Fleizach.

aria-level now works on headings without an explicit role="heading" defined. Updated existing test coverage.

Source/WebCore:

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::headingLevel):

LayoutTests:

* accessibility/heading-level-expected.txt:
* accessibility/heading-level.html:

Canonical link: https://commits.webkit.org/133177@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148654 268f45cc-cd09-0410-ab3c-d52691b4dbfc